Fixed small formatting error that made the header too big, fixed a spelling mistake

--- a/css/contact.scss
+++ b/css/contact.scss
@@ -25,12 +25,6 @@ main {
   justify-content: center;
   padding: 10px;
 }
-// Header
-.hello {
-  margin: 1em;
-  text-align: center;
-  font-size: 2em;
-}
 // Contact form
 form {
   background-color: #fadce2;
@@ -46,6 +40,7 @@ form {
   animation-duration: 10s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
+  align-self: center;
   input {
     width: 50%;
     padding: 10px 0;
