--- a/css/style.scss
+++ b/css/style.scss
@@ -40,7 +40,7 @@ nav {
 }
 // All H1's
 h1 {
-    font-size: 6em;
+    font-size: 3em;
     color: #171D1F;
     font-family:'Noto Sans JP', sans-serif;
     width:100vw;
@@ -86,4 +86,6 @@ nav {
         font-weight:bold;
     }
     }
+h1 {
+        font-size: 6em;
 }
